--- a/style.css
+++ b/style.css
@@ -183,3 +183,62 @@ span{
 .nav-cart > i{
     font-size: 2rem;
 }
+
+.panel{
+    height: 2.5rem;
+    width: 100%;
+    background-color: #232F3E;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0.1rem 0.5rem;
+    gap: 1rem;
+}
+
+.panel-all{
+    height: 100%;
+    width: 4rem;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+.panel-options{
+    height: 100%;
+    width: 100%;
+    color: white;
+    display: flex;
+    justify-content: start;
+    gap: 0.8rem;
+    align-items: center;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.panel-options > p{
+    height: 100%;
+    width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 0.5rem;
+}
+
+.panel-all > i{
+    font-size: 1.6rem;
+}
+
+.panel-deals{
+    color: white;
+    height: 100%;
+    width: 15rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
