--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
 }
 
 body{
     height: 100vh;
-    width: 100vw;
+    max-width: 100vw;
 }
 
 .navbar{
@@ -242,3 +243,57 @@ span{
     text-align: center;
 }
 
+.hero{
+    background-image: url("./images/hero_image.jpg");
+    background-size: cover;
+    height: 25rem;
+    width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.hero-msg{
+    background-color: white;
+    height: 2.5rem;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    margin-bottom: 1.5rem;
+}
+
+.hero-msg > a{
+    color: #007185;
+}
+
+.shop{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    background-color: #E2E7E6;
+    width: 100%;
+}
+
+.box{
+    width: 23%;
+    height: 500px;
+    background-color: white;
+    padding: 1.5rem 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+    margin-top: 1.5rem;
+}
+
+.box-img{
+    height: 80%;
+    width: 100%;
+    background-repeat: no-repeat;
+}
+
+.box > p{
+    color: #007185;
+}
