--- a/style.css
+++ b/style.css
@@ -274,6 +274,7 @@ span{
     justify-content: space-evenly;
     background-color: #E2E7E6;
     width: 100%;
+    padding-bottom: 1.5rem;
 }
 
 .box{
@@ -296,4 +297,161 @@ span{
 
 .box > p{
     color: #007185;
+}
+
+.foot-panel-1{
+    background-color: #37475A;
+    color: white;
+    height: 3.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+}
+
+.foot-panel-1 > a{
+    color: white;
+}
+
+.foot-panel-2{
+    background-color: #222F3D;
+    color: white;
+    height: 32rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.foot-panel-2-box{
+    height: 25rem;
+    width: 20rem;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    padding: 0 1rem;
+}
+
+.foot-panel-2-box > ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    gap: 0.85rem;
+}
+
+.foot-panel-2-box ul > p {
+    color: white;
+    font-size: 1.15rem;
+}
+
+.foot-panel-2-box ul > h2 {
+    color: white;
+    font-size: 1.25rem;
+}
+
+.foot-panel-2-box ul > p:hover{
+    border-bottom: 2px solid white;
+}
+
+.foot-panel-2-box ul > h2 {
+   margin-bottom: 0.5rem;
+}
+
+.foot-panel-3{
+    height: 6rem;
+    background-color: #232F3E;
+    border-top: 1px solid #3A4553;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    padding: 5rem 0;
+}
+
+.foot-panel-3 > img {
+    height: 6rem;
+    width: 9rem;
+}
+
+.foot-panel-3-select{
+    color: white;
+    border: 1px solid #8D9096;
+    height: 3rem;
+    width: 8rem;
+    border-radius: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    font-size: 1.1rem;
+}
+
+.select-2{
+    width: 12rem;
+    padding: 0 1rem;
+}
+
+.foot-panel-3-select > img{
+    height: 2rem;
+    width: 3rem;
+}
+
+.select-3{
+    width: 12rem;
+    gap: 0.3rem;
+}
+
+.foot-panel-4{
+    height: 40rem;
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(7, 1fr);
+    background-color: #131A22;
+    color: white;
+    padding: 3rem 10rem;
+}
+
+.foot-panel-4-box{
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    font-size: 1rem;
+    padding: 1rem;
+}
+
+.title{
+    color: #D7D4DD;
+    font-weight: 500;
+}
+
+.desc{
+    color: #999999;
+}
+
+.foot-panel-5{
+    background-color: #131A22;
+    height: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 3.5rem;
+    gap: 0.5rem;
+}
+
+.link-container{
+    width: auto;
+    height: 2rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+.link-container > p:hover{
+    border-bottom: 1.5px solid #D7D4DD;
 }
